# sensor_tcs34725_yoshida_avelar

./: .gitignore  README.md  relatorio.md  relatorio.tex
docs/: INSTALL.md  run.md
src/: CMakeLists.txt  led.c  led.h  main.c
